--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,10 @@
-spring.application.name=future-stack
+spring.application.name=future_stack
+server.port=${PORT:8080}
 
-spring.datasource.url=jdbc:h2:mem:testdb
+spring.security.oauth2.client.registration.github.client-id=${GITHUB_CLIENT_ID}
+spring.security.oauth2.client.registration.github.client-secret=${GITHUB_CLIENT_SECRET}
+spring.security.oauth2.client.registration.github.scope=read:user,user:email
+spring.messages.basename=messages
+spring.messages.encoding=UTF-8
 
-spring.jpa.show-sql=true
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
+spring.profiles.active=${ACTIVE_PROFILE:dev}
