--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,4 +7,9 @@ spring.security.oauth2.client.registration.github.scope=read:user,user:email
 spring.messages.basename=messages
 spring.messages.encoding=UTF-8
 
-spring.profiles.active=${ACTIVE_PROFILE:dev}
+spring.datasource.url=jdbc:postgresql://localhost:5433/futurestack
+spring.datasource.username=futurestack
+spring.datasource.password=futurestack
+spring.jpa.hibernate.ddl-auto=validate
+spring.flyway.enabled=true
+spring.sql.init.mode=never
