--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.application.name=future_stack
 server.port=${PORT:8080}
+server.address=0.0.0.0 
 
 spring.security.oauth2.client.registration.github.client-id=${GITHUB_CLIENT_ID}
 spring.security.oauth2.client.registration.github.client-secret=${GITHUB_CLIENT_SECRET}
@@ -7,9 +8,9 @@ spring.security.oauth2.client.registration.github.scope=read:user,user:email
 spring.messages.basename=messages
 spring.messages.encoding=UTF-8
 
-spring.datasource.url=jdbc:postgresql://localhost:5433/futurestack
-spring.datasource.username=futurestack
-spring.datasource.password=futurestack
+spring.datasource.url=${DATABASE_URL:jdbc:postgresql://localhost:5433/futurestack}
+spring.datasource.username=${DATABASE_USERNAME:futurestack}
+spring.datasource.password=${DATABASE_PASSWORD:futurestack}
 spring.jpa.hibernate.ddl-auto=validate
 spring.flyway.enabled=true
 spring.sql.init.mode=never
