--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,4 @@ spring.datasource.password=${DATABASE_PASSWORD:futurestack}
 spring.jpa.hibernate.ddl-auto=validate
 spring.flyway.enabled=true
 spring.sql.init.mode=never
+spring.profiles.active=repair-once
