--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,8 @@ spring.security.oauth2.client.registration.github.client-secret=${GITHUB_CLIENT_
 spring.security.oauth2.client.registration.github.scope=read:user,user:email
 spring.messages.basename=messages
 spring.messages.encoding=UTF-8
+spring.flyway.schemas=futurestackApi
+spring.jpa.properties.hibernate.default_schema=futurestackApi
 
 spring.datasource.url=${DATABASE_URL:jdbc:postgresql://localhost:5433/futurestack}
 spring.datasource.username=${DATABASE_USERNAME:futurestack}
