--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,12 +7,12 @@ spring.security.oauth2.client.registration.github.client-secret=${GITHUB_CLIENT_
 spring.security.oauth2.client.registration.github.scope=read:user,user:email
 spring.messages.basename=messages
 spring.messages.encoding=UTF-8
-spring.flyway.schemas=futurestackApi
-spring.jpa.properties.hibernate.default_schema=futurestackApi
-
-spring.datasource.url=${DATABASE_URL:jdbc:postgresql://localhost:5433/futurestack}
-spring.datasource.username=${DATABASE_USERNAME:futurestack}
-spring.datasource.password=${DATABASE_PASSWORD:futurestack}
-spring.jpa.hibernate.ddl-auto=validate
+spring.datasource.url=${DATABASE_URL}
+spring.datasource.username=${DATABASE_USERNAME}
+spring.datasource.password=${DATABASE_PASSWORD}
 spring.flyway.enabled=true
+spring.flyway.schemas=futurestackApi
+spring.flyway.default-schema=futurestackApi
+spring.jpa.properties.hibernate.default_schema=futurestackApi
+spring.jpa.hibernate.ddl-auto=validate
 spring.sql.init.mode=never
