--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,8 +11,8 @@ spring.datasource.url=${DATABASE_URL}
 spring.datasource.username=${DATABASE_USERNAME}
 spring.datasource.password=${DATABASE_PASSWORD}
 spring.flyway.enabled=true
-spring.flyway.schemas=futurestackApi
-spring.flyway.default-schema=futurestackApi
-spring.jpa.properties.hibernate.default_schema=futurestackApi
+spring.flyway.schemas=public
+spring.flyway.default-schema=public
+spring.jpa.properties.hibernate.default_schema=public
 spring.jpa.hibernate.ddl-auto=validate
 spring.sql.init.mode=never
